fix/ align items navbar

--- a/medicSearch/static/css/output.css
+++ b/medicSearch/static/css/output.css
@@ -767,10 +767,6 @@ video {
   font-weight: 800;
 }
 
-.font-light {
-  font-weight: 300;
-}
-
 .font-medium {
   font-weight: 500;
 }
